JSW Devsb/src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Account__r.State__c</formula>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Discount__c</fullName>
        <label>Additional Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adhoc_Incentive_Value__c</fullName>
        <label>Adhoc Incentive Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BED_Total__c</fullName>
        <label>BED Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Basic_Price_Per_MT__c</fullName>
        <label>Basic Price Per MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Party_State__c</fullName>
        <label>Bill To Party State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Doc_Type__c</fullName>
        <label>Billing Doc Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Short_Form__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CGST_Value__c</fullName>
        <label>CGST Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CGST__c</fullName>
        <label>CGST %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSTT__c</fullName>
        <label>CST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CST__c</fullName>
        <label>%CST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancelled_Invoice__c</fullName>
        <label>Cancelled Invoice</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cancelled_Invoive_formula__c</fullName>
        <formula>IF( CONTAINS(Cancelled_Invoice__c, &apos;-&apos;) , VALUE(LPAD( LEFT(  Cancelled_Invoice__c ,  LEN(Cancelled_Invoice__c  ) -1) , LEN( Cancelled_Invoice__c ), &apos;-&apos;)),VALUE( Cancelled_Invoice__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancelled Invoive formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Invoice_Date_Formula__c</fullName>
        <formula>Commercial_Invoice_Date__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commercial_Invoice_Date__c</fullName>
        <label>Commercial Invoice Date SAP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commercial_Invoice_Number__c</fullName>
        <externalId>true</externalId>
        <label>Commercial Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Grp1_from_Master__c</fullName>
        <label>Cust.Grp1 from Master</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Grup__c</fullName>
        <label>Cust.Grup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Grup_desc__c</fullName>
        <label>Cust.Grup.Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_GSTN_Number__c</fullName>
        <label>Customer GSTN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_1__c</fullName>
        <label>Customer Group 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_2__c</fullName>
        <label>Customer Group 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_3__c</fullName>
        <label>Customer Group 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Incentive_Value__c</fullName>
        <label>Customer Incentive Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Special_Dscount__c</fullName>
        <description>Special discount for special customers in Bangalore Core, etc</description>
        <formula>IF( AND (OR(Sold_To_Code__c = &quot;KA02T00070&quot;, Sold_To_Code__c = &quot;KA02T00074&quot;, Sold_To_Code__c = &quot;KA02T00135&quot;, Sold_To_Code__c = &quot;KA02T00136&quot;,Sold_To_Code__c = &quot;KA02T00137&quot;) , OR(Brand_Short_Form__c= &quot;PSC&quot;,Brand_Short_Form__c=&quot;CHD&quot;)), (7*Total_value__c/100) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Special Dscount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Targets_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked - Its been queried to update the actual field  in Dealer Targets Object</description>
        <label>Dealer Targets Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_Formula__c</fullName>
        <formula>Delivery_Date__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date SAP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Number__c</fullName>
        <label>Delivery Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery</label>
        <referenceTo>Delivery__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Depot_Invoice__c</fullName>
        <formula>IF(OR(Plant__c=&apos;3001&apos;,Plant__c=&apos;3002&apos;,Plant__c=&apos;3003&apos;,Plant__c=&apos;3004&apos;,Plant__c=&apos;3005&apos;,Plant__c=&apos;3W01&apos;),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depot Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel_Desc__c</fullName>
        <label>Distribution Channel Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>District_Actuals_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>District Actuals Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>District_Inv_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>District Inv Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Districts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Districts</label>
        <referenceTo>Districts__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division_Description__c</fullName>
        <label>Division Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>53</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <formula>Owner:User.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excise_Invoice_Date_Formula__c</fullName>
        <formula>Excise_Invoice_Date__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Excise Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Excise_Invoice_Date__c</fullName>
        <label>Excise Invoice Date SAP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Excise_Invoice_Number__c</fullName>
        <label>Excise Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIrst_Date_of_Month__c</fullName>
        <formula>DATE( YEAR(TODAY()),MONTH(TODAY()) ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FIrst Date of Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <label>Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Date__c</fullName>
        <formula>IF(Commercial_Invoice_Date_Formula__c+30&lt;TODAY(),
   IF(OR(MONTH(Commercial_Invoice_Date_Formula__c)=1,
	     MONTH(Commercial_Invoice_Date_Formula__c)=3,
		 MONTH(Commercial_Invoice_Date_Formula__c)=5,
		 MONTH(Commercial_Invoice_Date_Formula__c)=8,
         MONTH(Commercial_Invoice_Date_Formula__c)=10
	  ),  
      IF(MONTH(Commercial_Invoice_Date_Formula__c)=1,
         IF(MOD(YEAR(Commercial_Invoice_Date_Formula__c),4)=0,
            IF(DAY(Commercial_Invoice_Date_Formula__c)&gt;29,
               DATE(YEAR(Commercial_Invoice_Date_Formula__c),2,29),
               DATE(YEAR(Commercial_Invoice_Date_Formula__c),2,DAY(Commercial_Invoice_Date_Formula__c))
            ),
            IF(DAY(Commercial_Invoice_Date_Formula__c)&gt;28,
               DATE(YEAR(Commercial_Invoice_Date_Formula__c),2,28),
               DATE(YEAR(Commercial_Invoice_Date_Formula__c),2,DAY(Commercial_Invoice_Date_Formula__c))
            )
         ),
         IF(DAY(Commercial_Invoice_Date_Formula__c)&gt;30,
			DATE(YEAR(Commercial_Invoice_Date_Formula__c),MONTH(Commercial_Invoice_Date_Formula__c)+1,30),
			DATE(YEAR(Commercial_Invoice_Date_Formula__c),MONTH(Commercial_Invoice_Date_Formula__c)+1,DAY(Commercial_Invoice_Date_Formula__c))
		 )
      ),
	  IF(MONTH(Commercial_Invoice_Date_Formula__c)=12,
		 DATE(YEAR(Commercial_Invoice_Date_Formula__c)+1,1,DAY(Commercial_Invoice_Date_Formula__c)),
		 DATE(YEAR(Commercial_Invoice_Date_Formula__c),MONTH(Commercial_Invoice_Date_Formula__c)+1,DAY(Commercial_Invoice_Date_Formula__c)) 
	  )
   ),
   null
)</formula>
        <label>Future Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IGST_Value__c</fullName>
        <label>IGST Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IGST__c</fullName>
        <label>IGST %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inco_Terms__c</fullName>
        <label>Inco Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institutional__c</fullName>
        <formula>IF(Cust_Grp1_from_Master__c = &quot;N01-INSTITUTIONS&quot;, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institutional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Check__c</fullName>
        <formula>Account__r.Owner.FirstName  =  Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Owner Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Discount_Value__c</fullName>
        <label>Invoice Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_NSR_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice NSR Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LR_Number__c</fullName>
        <label>LR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Month_Sale_MTD__c</fullName>
        <formula>DATE(YEAR( TODAY()),MONTH( TODAY() ) - 1, DAY( TODAY() ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month Sale MTD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MH_Actuals_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MH Actuals Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMC_Code__c</fullName>
        <label>MMC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMC_Name__c</fullName>
        <label>MMC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMC_Value__c</fullName>
        <label>MMC Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMC__c</fullName>
        <label>MMC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRP_Value_Per_Bag__c</fullName>
        <label>MRP Value Per Bag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRP_Value_Per_MT__c</fullName>
        <label>MRP Value Per Bag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Man_Communication__c</fullName>
        <label>Middle Man Commission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Of_Comertiol_Date__c</fullName>
        <formula>MONTH( Commercial_Invoice_Date__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Of Comertiol Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_of_Commercial_Invoice_Date__c</fullName>
        <formula>CASE( MONTH(  Commercial_Invoice_Date_Formula__c ),  1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;none&quot;)</formula>
        <label>Month of Commercial Invoice Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSR_C_F_Discount__c</fullName>
        <label>NSR C&amp;F Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_C_F_Value__c</fullName>
        <label>NSR C&amp;F Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Other_Discount__c</fullName>
        <label>NSR Other Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Other_Value__c</fullName>
        <label>NSR Other Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_PD_Value__c</fullName>
        <label>NSR PD Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_PD__c</fullName>
        <formula>IF( CSTT__c&gt;0, 0 , (NSR_PD_Value__c *  Qty__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NSR PD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_PRFT_Dump_Discout__c</fullName>
        <label>NSR PRFT Dump Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_PRFT_Value__c</fullName>
        <label>NSR PRFT Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Packing_Cost__c</fullName>
        <formula>CASE( Pack_Type__c , &apos;HDPE BAG&apos;, 150* Qty__c , &apos;PP BAG&apos;, 150* Qty__c , &apos;PAPER BAG&apos;, 430* Qty__c , &apos;2S LPP&apos;, 204* Qty__c ,&apos;1S LPP&apos;, 204*Qty__c, &apos;STAR BAG&apos;, 204*Qty__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NSR Packing Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Rake_Discount__c</fullName>
        <label>NSR Rake Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_T_Value__c</fullName>
        <formula>Total_value__c - (  MMC__c   + BED_Total__c + CGST_Value__c +  CSTT__c +  IGST_Value__c +  SGST_Value__c +  UGST_Value__c +   VAT_Value__c + Freight__c + (NSR_C_F_Value__c *  Qty__c ) +    (( NSR_Other_Discount__c ) - ABS(Additional_Discount__c) ) +  NSR_Packing_Cost__c + (NSR_PD_Value__c *  Qty__c ) + (NSR_PRFT_Value__c *  Qty__c ) + NSR_Rake_Discount__c +  Total_Adhoc_Discount__c )- IF( (Commercial_Invoice_Date_Formula__c &gt;  DATE(2017,04,30) &amp;&amp; Commercial_Invoice_Date_Formula__c &lt; DATE(2017,07,01)   &amp;&amp;  (Brand_Short_Form__c  = &apos;PSC  || CHD&apos;)) ,Discount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NSR Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Targets_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NSR Targets Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NSR_Total_Basic_Price__c</fullName>
        <formula>NSR_C_F_Value__c  +  NSR_Other_Value__c  +  NSR_PD_Value__c  +  NSR_PRFT_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NSR Total Basic Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ODN_Number__c</fullName>
        <label>ODN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Invoice_Number__c</fullName>
        <label>Original Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_invoice_formula__c</fullName>
        <formula>LEFT( Original_Invoice_Number__c , 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original invoice formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAcking_Cost__c</fullName>
        <label>PAcking Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pack_Type__c</fullName>
        <label>Pack Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Decsription__c</fullName>
        <label>Payment Terms Decsription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant Master</label>
        <referenceTo>Plant_Master__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant_Name__c</fullName>
        <label>Plant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Short_Form__c</fullName>
        <label>Plant Short Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Po_Text__c</fullName>
        <label>Po Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty in MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_MT__c</fullName>
        <label>Rate/MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regional_Office__c</fullName>
        <label>Regional Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Road_Invoice__c</fullName>
        <formula>IF( Shipping_Type__c =&apos;Rail transport&apos;,false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Road Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SGST_Value__c</fullName>
        <label>SGST Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SGST__c</fullName>
        <label>SGST %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLOC__c</fullName>
        <defaultValue>&quot;FG01&quot;</defaultValue>
        <label>SLOC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_PO_Number__c</fullName>
        <label>Sale Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District_Description__c</fullName>
        <label>Sales District Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <externalId>true</externalId>
        <label>Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Employee_Name__c</fullName>
        <label>Sales Employee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Employee__c</fullName>
        <label>Sales Employee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group_Description__c</fullName>
        <label>Sales Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Code__c</fullName>
        <formula>Account__r.Sales_Office__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Office Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Description__c</fullName>
        <label>Sales Office Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Sap_code__c</fullName>
        <label>Sales Office Sap code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Date_Formula__c</fullName>
        <formula>Sales_Order_Date__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Date__c</fullName>
        <label>Sales Order Date SAP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Orders__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Orders</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Promoter_Name__c</fullName>
        <label>Sales Promoter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Promoter__c</fullName>
        <label>Sales Promoter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Destination__c</fullName>
        <label>Ship To Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_District_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To District</label>
        <referenceTo>Districts__c</referenceTo>
        <relationshipLabel>Invoices (Ship To District)</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_District__c</fullName>
        <label>Ship To District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Party</label>
        <referenceTo>Ship_To_Party__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_Code__c</fullName>
        <label>Ship to Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Amount__c</fullName>
        <label>Shipment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Type__c</fullName>
        <label>Shipping Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Code__c</fullName>
        <label>Sold To Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Name__c</fullName>
        <label>Sold to Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sreight_Debit__c</fullName>
        <label>Freight Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State1__c</fullName>
        <formula>CASE( (State_Code__c), &quot;36&quot;, &quot;Telangana&quot;, &quot;32&quot;, &quot;Pondicherry&quot;, &quot;25&quot;, &quot;West-Bengal&quot;, &quot;24&quot;, &quot;Uttar-Pradesh&quot;, &quot;22&quot;, &quot;Tamilnadu&quot;, &quot;20&quot;, &quot;Rajastan&quot;, &quot;18&quot;, &quot;Orissa&quot;, &quot;13&quot;, &quot;Maharastra&quot;, &quot;11&quot;, &quot;Kerala&quot;, &quot;10&quot;, &quot;Karnataka&quot;, &quot;06&quot;, &quot;Gujarat&quot;, &quot;05&quot;, &quot;Goa&quot;, &quot;01&quot;, &quot;Andhra-Pradesh&quot;, &quot;07&quot;, &quot;Haryana&quot;, &quot;28&quot;, &quot;Dadra Und Nagar Hav&quot;, &quot;35&quot;, &quot;Uttarakhand&quot;,&quot;34&quot;, &quot;Jharkhand&quot;,  &quot;Others&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateNSR_Targets_Proccessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>StateNSR Targets Proccessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Actuals_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Actuals Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Dealer_Code__c</fullName>
        <label>Sub-Dealer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Dealer_Name__c</fullName>
        <label>Sub-Dealer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TGT_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TGT Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory_Dist_Code__c</fullName>
        <formula>Territory__r.Districts__r.District_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Dist Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Dist__c</fullName>
        <formula>Territory__r.Districts__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Dist</label>
        <type>Text</type>
    </fields>
</CustomObject>